[package]
  name    = "fishamnium"
  version = "0.1.0"
  edition = "2024"

[dependencies]
  clap       = { version = "4.5", features = ["derive"] }
  comfy-table = { version = "7.1", features = ["custom_styling"] }
  nix        = { version = "0.29", features = ["fs", "hostname", "process", "user"] }
  regex      = "1.11"
  serde      = { version = "1.0", features = ["derive"] }
  serde_yaml = "0.9"
  threadpool = "1.8"

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = "fat"
  opt-level     = 3
  panic         = "abort"
  strip         = "symbols"
